--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,261 @@
-.App {
-  text-align: center;
+.home{
+  background: url('https://themehut.co/wp/movflx/wp-content/uploads/2022/08/banner_bg01.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  overflow: hidden;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo{
+  /* width: 150px; */
+  clip-path: polygon(50% 15%, 100% 0, 100% 100%, 50% 85%, 0 100%, 0 0);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logo:hover{
+  cursor: pointer;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.navbar-link{
+  font-size: .85rem!important;
+}
+.signin-button{
+  padding: .5rem 2rem; 
+  background-color: rgba(255, 255, 255, 0);
   color: white;
+  border: 1px solid yellow;
+  border-radius: 1.5rem;
+  font-weight: bold;
+}
+.signin-button:hover{
+  background-color: yellow;
+  transition: .5s;
+  color: black;
+}
+.home-button{
+  padding: .85rem 2.5rem;
+  background-color: rgba(255, 255, 255, 0);
+  border-radius: 2rem;
+  border: 1px solid yellow;
+  color: white;
+  font-weight: bold;
+  font-size: .8rem;
+}
+.home-button:hover{
+  transition: .5s;
+  background-color: yellow;
+  /* color: black; */
+}
+.signin-container{
+  background-color: rgba(0, 0, 0, 0.373)!important;
+}
+.sigin-submit-button{
+  width: 100%;
+  padding: .6rem 0;
+  background-color: rgba(255, 255, 255, 0);
+  border: 1px solid yellow;
+  border-radius: 2rem;
+  color: white;
+  font-weight: bold;
+  transition: .5s;
+}
+.sigin-submit-button:hover{
+  background-color: yellow;
+  color: black;
+  border: 1px solid black;
+  transition: .5s;
+}
+.film-page-container{
+  background: url('https://themehut.co/wp/movflx/wp-content/uploads/2022/08/banner_bg01.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: auto;
+}
+.film-card{
+  background-color: rgba(0, 0, 0, 0.453);
+  animation: myAnim 1s ease 0s 1 normal forwards;
+  /* transition: .5s; */
+}
+.film-cardd{
+  background-color: rgba(253, 253, 253, 0) !important;
+  border: 1px solid yellow;
+}
+/* .film-card:hover{
+  scale: 1.05;
+  transition: .5s;
+} */
+
+/* .film-card-button{
+  background-color: rgba(255, 255, 255, 0);
+  border: 1px solid white;
+  color: white;
+  width: 33%;
+  height: 40px;
+  font-size: .8rem;
+  border-radius: 2rem;
+} */
+.film-card-button:hover{
+  background-color: white;
+  color: black;
+  transition: .5s;
+}
+.add-movie-container{
+  background: url('https://themehut.co/wp/movflx/wp-content/uploads/2022/08/banner_bg01.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 120vh;
+}
+.popup{
+  position: absolute;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.637);
+  z-index: 1;
+}
+.popup-fragman{
+  position: absolute;
+  height: auto;
+  background-color: rgba(0, 0, 0, 0.637);
+  z-index: 1;
 }
 
-.App-link {
-  color: #61dafb;
+/**************** Spinner Start ****************/
+
+
+.lds-spinner {
+  color: official;
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-spinner div {
+  transform-origin: 40px 40px;
+  animation: lds-spinner 1.2s linear infinite;
+}
+.lds-spinner div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 3px;
+  left: 37px;
+  width: 6px;
+  height: 18px;
+  border-radius: 20%;
+  background: black;
+}
+.lds-spinner div:nth-child(1) {
+  transform: rotate(0deg);
+  animation-delay: -1.1s;
+}
+.lds-spinner div:nth-child(2) {
+  transform: rotate(30deg);
+  animation-delay: -1s;
+}
+.lds-spinner div:nth-child(3) {
+  transform: rotate(60deg);
+  animation-delay: -0.9s;
+}
+.lds-spinner div:nth-child(4) {
+  transform: rotate(90deg);
+  animation-delay: -0.8s;
+}
+.lds-spinner div:nth-child(5) {
+  transform: rotate(120deg);
+  animation-delay: -0.7s;
+}
+.lds-spinner div:nth-child(6) {
+  transform: rotate(150deg);
+  animation-delay: -0.6s;
+}
+.lds-spinner div:nth-child(7) {
+  transform: rotate(180deg);
+  animation-delay: -0.5s;
+}
+.lds-spinner div:nth-child(8) {
+  transform: rotate(210deg);
+  animation-delay: -0.4s;
+}
+.lds-spinner div:nth-child(9) {
+  transform: rotate(240deg);
+  animation-delay: -0.3s;
+}
+.lds-spinner div:nth-child(10) {
+  transform: rotate(270deg);
+  animation-delay: -0.2s;
+}
+.lds-spinner div:nth-child(11) {
+  transform: rotate(300deg);
+  animation-delay: -0.1s;
+}
+.lds-spinner div:nth-child(12) {
+  transform: rotate(330deg);
+  animation-delay: 0s;
+}
+@keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+/**************** Spinner End ****************/
+
+@keyframes myAnim {
+	0% {
+		transform: scale(0);
+	}
+
+	100% {
+		transform: scale(1);
+	}
+}
+
+.alert-animation{
+  animation: myAnim-alert 1s ease 0s 1 normal forwards;
+}
+
+@keyframes myAnim-alert {
+	0% {
+		animation-timing-function: ease-in;
+		opacity: 0;
+		transform: translateY(-250px);
+	}
+
+	38% {
+		animation-timing-function: ease-out;
+		opacity: 1;
+		transform: translateY(0);
+	}
+
+	55% {
+		animation-timing-function: ease-in;
+		transform: translateY(-65px);
+	}
+
+	72% {
+		animation-timing-function: ease-out;
+		transform: translateY(0);
+	}
+
+	81% {
+		animation-timing-function: ease-in;
+		transform: translateY(-28px);
+	}
+
+	90% {
+		animation-timing-function: ease-out;
+		transform: translateY(0);
+	}
+
+	95% {
+		animation-timing-function: ease-in;
+		transform: translateY(-8px);
+	}
+
+	100% {
+		animation-timing-function: ease-out;
+		transform: translateY(0);
+	}
 }
